Fix contrast issue on contact form

--- a/src/scss/abstracts/_utilities.scss
+++ b/src/scss/abstracts/_utilities.scss
@@ -20,7 +20,7 @@
     top: 0;
     left: -0.45rem;
     font-size: 1.2rem;
-    color: $gold;
+    color: $placeholder-txt;
   }
 }
 
